[package]
name = "ServerSeekerV2-Rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
repository = "https://git.funtimes909.xyz/ServerSeekerV2/ServerSeekerV2-Rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
indicatif = { version = "0.17" }
futures-core = "0.3"
futures-util = "0.3"

[profile.release]
strip = true
lto = "fat"
opt-level = 3
