[package]
name = "ServerSeekerV2"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
repository = "https://git.funtimes909.xyz/ServerSeekerV2/ServerSeekerV2"
authors = ["Funtimes909"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "ipnet", "uuid", "json"] }
indicatif = { version = "0.17" }
futures-util = "0.3"
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
azalea-protocol = { version = "0.12.0", optional = true }
uuid = { version = "1.12.1", optional = true }

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1

[features]
warner = ["dep:azalea-protocol", "dep:uuid"]